# scripta-mac-os-app

./: .gitignore  CLAUDE.md  Makefile  install-cli.sh  package-lock.json  package.json
docs/: mytodo.md
docs/superpowers/plans/: 2026-06-15-mac-scripta-viewer.md  2026-06-15-scripta-cli.md  2026-06-15-tree-ui-polish.md  2026-06-16-current-folder-newfile-highlight.md  2026-06-16-pdf-generation.md  2026-06-16-reader-sync-lastvault.md  2026-06-16-reader-toc-icon.md  2026-06-16-rename-reader-width-folder-highlight.md  2026-06-16-sidebar-spacing-and-rust-lastvault.md  2026-06-17-full-incremental-parse-toggle.md  2026-06-17-pdf-error-report.md  2026-06-18-markdown-rendering.md  2026-06-19-dark-mode.md  2026-06-19-markdown-file-links.md  2026-06-19-new-file-placement.md  (+14 more)
frontend/: elm.json  index.html
frontend/scripta-compiler/: Scripta.elm  TestData.elm
frontend/src/: AiConfig.elm  Chat.elm  Editor.elm  Export.elm  FileOps.elm  Flags.elm  Language.elm  Main.elm  MarkdownRender.elm  Nav.elm  OpenFolders.elm  PathUtil.elm  Render.elm  SaveState.elm  Types.elm  View.elm  Workspace.elm
frontend/tests/: AiConfigTest.elm  ChatTest.elm  ChatViewTest.elm  FileOpsTest.elm  FlagsTest.elm  LanguageTest.elm  MarkdownRenderTest.elm  NavTest.elm  OpenFoldersTest.elm  PathUtilTest.elm  SaveStateTest.elm  TerminalTabsTest.elm  VaultShellLabelTest.elm  ViewModeTest.elm  ViewTextImageTest.elm  ViewThemeTest.elm  WorkspaceFilterTest.elm  WorkspaceTest.elm
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  fs_commands.rs  lib.rs  terminal.rs
(+85 files in other folders)
