[package]
name = "mac-scripta-viewer"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tempfile = "3"
base64 = "0.22"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
trash = "5"
walkdir = "2"
percent-encoding = "2"
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mac-scripta-viewer"
path = "src/main.rs"
